# meowfile

./: Cargo.toml  meowfile
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs  token.rs  tokens.rs
crates/meow-cli/: Cargo.toml
crates/meow-cli/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/src/syntax_kind/: generated.rs
crates/sourcegen/: Cargo.toml
crates/sourcegen/src/: lib.rs
crates/syntax/: Cargo.toml  meow.ungram
crates/syntax/src/: main.rs
crates/syntax/tests/: ast_src.rs  sourcegen_ast.rs
