[package]
name = "lex"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"

# Internal crates
diagnostics.workspace = true

[lints]
workspace = true
