[package]
name = "sourcegen"
publish = false
version = "0.0.0"

edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xshell = "0.2"

[lints]
workspace = true
